<resources>
    <string name="app_name">DatabaseTest</string>
    <string name="create_database">create database</string>
    <string name="add_book">add book</string>
    <string name="update_book">update book</string>
    <string name="condition_update_book">condition update</string>
    <string name="delete_book">delete book</string>
    <string name="query_book">query book</string>
</resources>
